public/chat.css
* {
  margin: auto;
  padding: 0px;
  box-sizing: border-box;
  max-width: 800px;
}

body {
  margin-top: 20px;
  font-family: 'Rubik', sans-serif;
  font-size: 24px;
}

form {
  padding: 3px;
  position: fixed;
  bottom: 20px;
  width: 100%;
}

form input {
  padding: 10px;
  margin-right: .5%;
  width: 90%;
}

form #button {
  color: #FFF;
  background: #00C371;
  border: none;
  padding: 10px;
  font-size: 18px;
  border-radius: 8px;
  width: 9%;
}

#messages {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

#messages li {
  padding: 5px 10px;
}

#messages li:nth-child(odd) {
  background: #eee;
}

#notifyUser {
  position: fixed;
  bottom: 42px;
  width: 100%;
}

